syntax = "proto3";

package example.simple;

option go_package = "example/proto";

message Simple{
  uint32 id = 1;
  string name = 2;
  bool is_simple = 3;
  repeated uint32 sample_lists = 4;
}